# askilit

./: .gitattributes  .gitignore  LICENSE  README.md  meson.build  update-translations.sh
DEBIAN/: README  askilit.postinst.debhelper  askilit.prerm.debhelper  changelog  control  copyright  debhelper-build-stamp  rules
data/: 99-askilit-touch.rules  com.asoftware.askilit.autostart.desktop  com.asoftware.askilit.desktop  meson.build
data/images/: README.md
debian/: changelog  postinst
etc/xdg/autostart/: askilitetcxdgautostart.desktop
new-structure/debian/: control
new-structure/src/: window.py
po/: askilit.pot  tr.po
src/: __init__.py  application.py  autolock.py  constants.py  dialogs.py  i18n.py  main.py  meson.build  network.py  network_restart.py  qrcode_generator.py  touch_handler.py  utils.py  window.py
src/ui/: README.md
usr/share/applications/: askilit.desktop
